infra/e2e/create_router_nop_logger_nop_exp.json
{
    "environment_name": "dev",
    "name": "e2e-experiment-manual",
    "config": {
        "routes": [
            {
                "id": "control",
                "type": "PROXY",
                "endpoint": "http://mockserver/control",
                "timeout": "5s"
            }
        ],
        "default_route_id": "control",
        "experiment_engine": {
            "type": "nop"
        },
        "resource_request": {
            "min_replica": 1,
            "max_replica": 1,
            "cpu_request": "200m",
            "memory_request": "250Mi"
        },
        "timeout": "5s",
        "log_config": {
            "result_logger_type": "nop"
        },
        "enricher": {
            "image": "kennethreitz/httpbin",
            "resource_request": {
                "min_replica": 1,
                "max_replica": 1,
                "cpu_request": "200m",
                "memory_request": "1Gi"
            },
            "endpoint": "anything",
            "timeout": "2s",
            "port": 80,
            "env": [
                {
                    "name": "TEST_ENV",
                    "value": "enricher"
                }
            ]
        },
        "ensembler": {
            "type": "docker",
            "docker_config": {
                "image": "{{.TestEchoImage}}",
                "resource_request": {
                    "min_replica": 2,
                    "max_replica": 2,
                    "cpu_request": "250m",
                    "memory_request": "256Mi"
                },
                "endpoint": "anything",
                "timeout": "3s",
                "port": 80,
                "env": [
                    {
                        "name": "TEST_ENV",
                        "value": "ensembler"
                    }
                ]
            }
        }
    }
}
