infra/e2e/turing.mockserver.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: mockserver
  labels:
    app: mockserver
data:
  http_request_response_mocks.json: |
    [
      {
        "httpRequest": {
          "path": "/control"
        },
        "httpResponse": {
          "body": {
            "version": "control"
          }
        }
      },
      {
        "httpRequest": {
          "path": "/treatment-a"
        },
        "httpResponse": {
          "body": {
            "version": "treatment-a"
          }
        }
      },
      {
        "httpRequest": {
          "path": "/treatment-b"
        },
        "httpResponse": {
          "body": {
            "version": "treatment-b"
          }
        }
      }
    ]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mockserver
  labels:
    app: mockserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mockserver
  template:
    metadata:
      labels:
        app: mockserver
    spec:
      containers:
        - name: mockserver
          image: mockserver/mockserver:mockserver-5.11.0
          env:
            - name: MOCKSERVER_INITIALIZATION_JSON_PATH
              value: /etc/initialization-json/http_request_response_mocks.json
          volumeMounts:
            - name: initialization-json
              mountPath: /etc/initialization-json
          ports:
            - containerPort: 1080
          resources:
            requests:
              cpu: "200m"
              memory: "384Mi"
      volumes:
        - name: initialization-json
          configMap:
            name: mockserver
---
apiVersion: v1
kind: Service
metadata:
  name: mockserver
  labels:
    app: mockserver
spec:
  selector:
    app: mockserver
  ports:
    - port: 80
      targetPort: 1080
---
apiVersion: v1
kind: Service
metadata:
  name: mockserver-upi-a
  labels:
    app: mockserver-upi-a
spec:
  selector:
    app: mockserver-upi-a
  ports:
    - port: 80
      targetPort: 50051
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mockserver-upi-a
  labels:
    app: mockserver-upi-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mockserver-upi-a
  template:
    metadata:
      labels:
        app: mockserver-upi-a
    spec:
      containers:
        - name: mockserver-upi-a
          image: ghcr.io/caraml-dev/upi-echo-server:0.3.2-1-g1faf05e
          ports:
            - containerPort: 50051
          command: ["/upi-echo-server"]
          args: ["--model-name", "mockserver-upi-a"]
          resources:
            requests:
              cpu: "20m"
              memory: "384Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: mockserver-upi-b
  labels:
    app: mockserver-upi-b
spec:
  selector:
    app: mockserver-upi-b
  ports:
    - port: 80
      targetPort: 50051
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mockserver-upi-b
  labels:
    app: mockserver-upi-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mockserver-upi-b
  template:
    metadata:
      labels:
        app: mockserver-upi-b
    spec:
      containers:
        - name: mockserver-upi-b
          image: ghcr.io/caraml-dev/upi-echo-server:0.3.2-1-g1faf05e
          ports:
            - containerPort: 50051
          command: ["/upi-echo-server"]
          args: ["--model-name", "mockserver-upi-b"]
          resources:
            requests:
              cpu: "20m"
              memory: "384Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: mockserver-upi-control
  labels:
    app: mockserver-upi-control
spec:
  selector:
    app: mockserver-upi-control
  ports:
    - port: 80
      targetPort: 50051
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mockserver-upi-control
  labels:
    app: mockserver-upi-control
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mockserver-upi-control
  template:
    metadata:
      labels:
        app: mockserver-upi-control
    spec:
      containers:
        - name: mockserver-upi-control
          image: ghcr.io/caraml-dev/upi-echo-server:0.3.2-1-g1faf05e
          ports:
            - containerPort: 50051
          command: ["/upi-echo-server"]
          args: ["--model-name", "mockserver-upi-control"]
          resources:
            requests:
              cpu: "20m"
              memory: "384Mi"
